feat(swagger): add all routes in docs swagger
